# shudaodao_lib

./: .gitignore  README.md  pyproject.toml  setup.py  update-dependencies.py
.github/workflows/: build_sdist.yml  build_wheels.yml
.github/workflows_bak/: pyproject.toml
src/shudaodao_acm/: __init__.py  meta_config.py  package_config.py
src/shudaodao_acm/api_registry/: hasher.c  hasher.pyi  scanner.c  scanner.pyi  service.c  service.pyi  todo.md
src/shudaodao_acm/schemas/: menu_item.c  menu_item.py
src/shudaodao_acm/webapi/: auth.py  system_enum.py  system_menu.py
src/shudaodao_app/: app_loader.c  application.c  application.pyi  checker.c  engine.c  engine.pyi  fast_api.c  meta.c  package.c  package.pyi  printer.c  router.c
src/shudaodao_auth/: meta_config.c  meta_config.py
src/shudaodao_auth/auth/: auth_data_rule.c  auth_router.c  auth_router.pyi
src/shudaodao_auth/engine/: casbin_engine.c
src/shudaodao_auth/entity_table/: t_auth_user.py
src/shudaodao_auth/services/: auth_service.c  auth_service.pyi  casbin_service.c
src/shudaodao_auth/webapi/: auth.c  auth.pyi
src/shudaodao_common/controller/: dept.c  user.c
src/shudaodao_common/controller_table/: dept.c  user.c
src/shudaodao_common/schema/: enum.c  enum.pyi  signed_model.c  signed_model.pyi
src/shudaodao_common/webapi/: __init__.py  enum.py  storage.py
src/shudaodao_config/: __init__.py  package_config.py
src/shudaodao_config/generate/: __init__.py
src/shudaodao_core/: __init__.py
src/shudaodao_core/app/: auth_router.c  base_app.c  base_context.c
src/shudaodao_core/auth/: auth_data_rule.c  auth_router.c  auth_router.pyi  casbin_db_adapter.c
src/shudaodao_core/config/: app_config.c  app_config.pyi  loader.c  loader.pyi  running_config.c
src/shudaodao_core/config_remote/: base.c  base.pyi  manager.c  manager.pyi  source_database.c  source_database.pyi
src/shudaodao_core/controller/: auth.c  default.c  generic_controller.c  router_config.c  table_controller.c  table_controller.py
src/shudaodao_core/engine/: casbin_engine.c  database_engine.c  database_engine.pyi  disk_engine.c  redis_engine.c  (+3 more)
src/shudaodao_kg/: package_config.py
src/shudaodao_meta/: __init__.py  meta_config.py  package_config.py
(+236 files in other folders)
