[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shudaodao"
version = "0.1.111"
description = "数道智融科技"
readme = "README.md"
authors = [
    { name = "SmartShudao" },
]
# 或者使用 SPDX 标识符
license = "MIT"
# 同时可以指定许可证文件
license-files = ["LICENSE"]

requires-python = ">=3.11"

dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=26.3.1",
    "boto3>=1.42.71",
    "casbin>=1.43.0",
    "casbin-async-sqlalchemy-adapter>=1.17.0",
    "cython>=3.2.4",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.12.1",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "setuptools>=82.0.1",
    "sqlmodel>=0.0.37",
    "starlette>=0.52.1",
    "tomli>=2.4.0",
]


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true


